<resources>
    <string name="app_name">waibaoUI</string>
    <string name="Mona_Lisa">《蒙娜丽莎》（意大利语：La Gioconda；法语：La Joconde；英语：Mona Lisa）是文艺复兴时期画家列奥纳多·达·芬奇所绘的肖像画，其之代表作。它可以说是世界上最著名的油画作品，很少有其他作品能像它一样，常常被人审查、研究或是演绎。它的拥有者，法国政府把它保存在巴黎的卢浮宫供公众欣赏。它是直接画在白杨木上的，面积不大，长77厘米，宽53厘米。画中描绘了一位表情内敛的、微带笑容的女士，她的笑容有时被称作是“神秘的笑容”。</string>
    <string name="SiMuWuDaFangDing">后母戊鼎（原称司母戊鼎），又称后母戊大方鼎、后母戊方鼎。原器1939年3月在河南安阳出土，是商王祖庚或祖甲为祭祀其母戊所制，是商周时期青铜文化的代表作，现藏于中国国家博物馆。后母戊鼎因鼎腹内壁上铸有“后母戊”三字得名，鼎呈长方形，口长112厘米、口宽79.2厘米，壁厚6厘米，连耳高133厘米，重达832.84公斤。鼎身雷纹为地，四周浮雕刻出盘龙及饕餮纹样，反映了中国青铜铸造的超高工艺和艺术水平。大维德花瓶，学名元至正十一年款青花云龙纹象耳瓶，共2支。</string>
    <string name="Sword_of_Goujian">越王勾践剑，春秋晚期越国青铜器，国家一级文物，1965年冬天出土于湖北省荆州市江陵县望山楚墓群中。因剑身上被镀上了一层含铬的金属而千年不锈。经无损科学检测，其主要合金成分为铜、锡、铅、铁、硫等。花纹处含硫高，因硫化铜可防锈。剑通高55.7厘米，宽4.6厘米，柄长8.4厘米，重875克，极其锋利。刻有“钺王鸠浅，自乍用鐱”八字。</string>
    <string name="Bronze_statue_of_the_zodiac">圆明园十二生肖兽首铜像，原为圆明园海晏堂外的喷泉的一部分，是清乾隆年间的红铜铸像。1860年英法联军侵略中国，火烧圆明园，兽首铜像开始流失海外。到2012年为止牛首、猴首、虎首、猪首、和马首铜像已回归中国，收藏在保利艺术博物馆；2013年4月26日，法国皮诺家族在北京宣布将向中方无偿捐赠流失海外的圆明园十二大水法中的青铜鼠首和兔首。此次捐赠的鼠首、兔首，为北京圆明园流失的十二生肖青铜像中的两件。目前，圆明园十二大水法中的十二大生肖兽首已经有8个回归中国，其中龙首目前在台湾保存完好，不过蛇首、鸡首、狗首、羊首则下落不明。</string>
    <string name="Qingming_Shanghe_map">清明上河图，中国十大传世名画之一。为北宋风俗画，北宋画家张择端仅见的存世精品，属国宝级文物，现藏于北京故宫博物院。清明上河图宽24.8厘米、长528.7厘米，绢本设色。作品以长卷形式，采用散点透视构图法，生动记录了中国十二世纪北宋都城东京（又称汴京，今河南开封）的城市面貌和当时社会各阶层人民的生活状况，是北宋时期都城汴京当年繁荣的见证，也是北宋城市经济情况的写照。这在中国乃至世界绘画史上都是独一无二的。在五米多长的画卷里，共绘了数量庞大的各色人物，牛、骡、驴等牲畜，车、轿、大小船只，房屋、桥梁、城楼等各有特色，体现了宋代建筑的特征。具有很高的历史价值和艺术价值。《清明上河图》虽然场面热闹，但表现的并非繁荣市景，而是一幅带有忧患意识的“盛世危图”，官兵懒散税务重。</string>
    <string name="Siyang_Fangzun">四羊方尊，是商朝晚期青铜礼器，祭祀用品。1938年出土于湖南宁乡县黄材镇月山铺转耳仑的山腰上，现属炭河里遗址。收藏于中国国家博物馆。四羊方尊是中国仍存商代青铜方尊中最大的一件，其每边边长为52.4 厘米，高58.3厘米，重量34.5公斤，长颈，高圈足，颈部高耸，四边上装饰有蕉叶纹、三角夔纹和兽面纹，尊的中部是器的重心所在，尊四角各塑一羊，肩部四角是4个卷角羊头，羊头与羊颈伸出于器外，羊身与羊腿附着于尊腹部及圈足上。同时，方尊肩饰高浮雕蛇身而有爪的龙纹，尊四面正中即两羊比邻处，各一双角龙首探出器表，从方尊每边右肩蜿蜒于前居的中间。据考古学者分析，四羊方尊是用两次分铸技术铸造的，即先将羊角与龙头单个铸好，然后将其分别配置在外范内，再进行整体浇铸。整个器物用块范法浇铸，一气呵成，鬼斧神工，显示了高超的铸造水平，被史学界称为“臻于极致的青铜典范”，位列十大传世国宝之一。</string>
    <string name="Pingfu_tie">西晋陆机的《平复帖》是故宫法帖的代表作品，有“法帖之祖”的美誉，无名款，宋人定为陆机作品，也是目前存世最早的名人墨迹。它用秃笔写于麻纸之上，笔意婉转，风格平淡质朴，其字体为草隶书。《平复帖》为镇国之书法，它见证了汉字的流变。它一方面是隶书发展过程中的标本，同时更是汉字由隶书向楷书过渡的重要佐证。《平复帖》本为清宫旧藏，嘉庆帝将其赏给亲王。后几经转手落入英国，名士张伯驹以4万大洋购入，从而使文物得以保全。</string>
    <string name="Plum_magpie">沈子蕃缂丝《梅鹊图》轴为故宫织绣的代表作品，图轴纵104cm，宽36cm。中国古代缂丝被认为是丝织工艺中最为高贵的品种，古人以“一寸缂丝一寸金”言缂丝作品之珍贵。缂丝之高贵，首先因其耗费工时巨大，以万缕千丝成其工巧，“如妇人一衣，终岁方成”。其次，缂技易学难精，虽摹缂书画，但并非简单地照葫芦画瓢，而需要纯熟的工艺技巧和相当的书画艺术修养。许多缂丝书画具有很高的艺术鉴赏价值，缂丝以其贵重而渐为皇家所垄断，现存传世缂丝珍品主要集中在故宫博物院。</string>
    <string name="Qianlong_Jinjin_Yonggu_Cup">乾隆款金瓯永固杯，此杯为故宫宫廷文物的代表作，“金瓯”寓意国家政权，它是清代皇帝每年元旦举行开笔仪式时专用的酒杯。每当元旦子时，皇帝在养心殿，把“金瓯永固杯”放在紫檀长案上，倒入屠苏酒，亲燃蜡烛，提起毛笔写下祈求江山社稷平安永固的吉语。此杯高12.5厘米，口径8厘米，足高5厘米，口边刻有回纹。根据清“内务府活计档”记载，乾隆皇帝对此杯的制作十分重视，不仅调用内库黄金、珍珠、宝石等珍贵材料，而且精工细作，曾多次修改，直至皇帝满意为止。因此，该杯一直被清代皇帝视为珍贵的祖传法宝。</string>
    <string name="Langyao_red_glaze_with_straight_bottle">郎窑红釉穿带直口瓶，此瓶为故宫陶瓷的代表作品，高20.8cm，口径6.1cm，足径9.1cm。景德镇流传一句话“若要穷，烧郎红”，因为其烧制极为困难，数百窑亦难烧成一件。18世纪初，江西巡抚郎廷极奉康熙之命到景德镇主持御窑，试图烧制出失传数百年的祭红，虽未成功，却成功地烧制出另外一种更为鲜亮的红釉瓷器，人们把这种瓷器以他的姓氏命名。</string>
    <string name="Xu_ya_fang_zun">酗亚方樽，青铜器的产生是古代中国从野蛮时代走向文明时代的重要标志之一，樽是盛酒弦纹樽器，流行于商早期至春秋战国时期。方樽传世较少，此尊为故宫青铜器的代表作品。上世纪70年代在山东益都苏埠屯出土了几件带有亚铭文的青铜器，从挖掘的墓穴来看，规模都不小，加上众多带有亚铭记的器物，说明它们所代表的可能是一个大族。</string>
    <string name="Painted_goldplated_pavilionstyle_selfopening_door_group">彩漆描金楼阁式自开门群仙祝寿御制钟，此钟为故宫钟表的代表作。17世纪前，中国皇宫一直以铜壶滴漏计时，意大利传教士利玛窦带着两个西洋自鸣钟叩开了中国宫廷的大门。此钟受西洋鸣钟的启示进行设计，彩漆描金楼阁式高185cm，面宽102cm，侧宽70cm，共有7套机械系统，分别控制走时、报时、景箱内的活动装置等，技术水准相当高。根据记录，从乾隆八年接旨着手设计到十四年完工，历时六年多。</string>
    <string name="Zhang_Cheng_embossed_lacquered_cloud_pattern_disk">张成造款雕漆云纹盘 为故宫漆器的代表作品。高3.3cm，口径19.2cm，盘木胎黑漆，内外均雕云纹，堆漆甚厚，晶莹照人，刻工圆润。张成是元代雕漆大家，其传世作品被一致认为是雕漆作品里的珍品，但署张成款的一些雕漆器物，被疑是伪作。这件剔红盘，是公认的张成的作品，是具有历史性的作品。</string>
    <string name="Sapphire_cloud_dragon_furnace">青玉云龙纹炉为故宫玉器的代表作品。此宝为宋代出品，高7.9cm，口径12.8cm，炉青玉质，通体以“工”字纹为底，上饰游龙、祥云和海水纹。器内底阴刻乾隆七言诗一首：“何年庙器赞天经，刻作飞龙殿四灵。毛伯邢侯异周制，祖丁父癸似商形。依然韫匵阅桑海，所惜从薪遇丙叮。土气羊脂胥变幻，只余云水淡拖青。”最后落款“乾隆戊戌孟秋御题”。</string>
    <string name="Qia_si_fa_lang_chan_zhi_lian_wen_xiang_er_lu">掐丝珐琅缠枝莲纹象耳炉，为故宫珐琅的代表作品。元代出品，通高13.9cm，口径16cm，足径13.5cm，清宫旧藏。“铜胎掐丝珐琅”就是我们俗称的“景泰蓝”，此器釉质莹润，有的部分釉质呈玻璃般的透明状，珐琅色泽浑厚谐调，富丽典雅。其实北京故宫的藏品只是故宫历史上国宝的一部分，其他还有很多目前珍藏在台北故宫和沈阳故宫内，值得我们继续去品味。</string>
    <string name="fuling_jianjie">茯苓，中药名。为多孔菌科真菌茯苓Poria cocos(Schw.)Wolf的干燥菌核。多于7～9月采挖，挖出后除去泥沙，堆置“发汗”后，摊开晾至表面干燥，再“发汗”，反复数次至现皱纹、内部水分大部散失后，阴干，称为“茯苓个”；或将鲜茯苓按不同部位切制，阴干，分别称为“茯苓块”和“茯苓片”。 </string>
    <string name="fuling_gongnengzhuzhi">1、利水渗湿，健脾化痰，宁心安神，败毒抗癌。药性平和，利湿而不伤正气。适量服食可作为春夏潮湿季节的调养佳品。
        2、可治小便不利、水肿胀满、痰饮咳逆、呕逆、恶阻、泄泻、遗精、淋浊、惊悸、健忘等症。
        3、所含茯苓酸具有增强免疫力、抗肿瘤以及镇静、降血糖等的作用。
        4、可松弛消化道平滑肌，抑制胃酸分泌，防止肝细胞坏死，抗菌等功效。 </string>
    <string name="fuling_yaoxing">味甘、淡，性平。归心、脾、肺、肾经。</string>
    <string name="fuling_yongfayongliang">内服:煎汤，3～5钱；或入丸、散。 </string>
    <string name="fuling_yaocaitezheng">常寄生在松树根上，形如甘薯，球状，外皮淡棕色或黑褐色，内部粉色或白色，精制后称为白茯苓或者云苓[1]。完整的茯苓呈类圆形、椭圆形、扁圆形或不规则团块，大小不一。外皮薄，棕褐色或黑棕色，粗糙，具皱纹和缢缩，有时部分剥落。质坚实，破碎面颗粒状，近边缘淡红色，有细小蜂窝样孔洞，内部白色，少数淡红色。有的中间抱有松根，习称“获神块”。气微，味淡，嚼之粘牙。以体重坚实、外皮色棕褐、皮纹细、无裂隙、断面白色细腻、粘牙力强者为佳。茯苓与土茯苓名称相似，因此易混。土茯苓是菝葜科植物光叶菝葜（Smilax glabra）的根，外皮黄棕色或灰褐色，与茯苓完全无关。 </string>
    <string name="fuling_peiwujinji">阴虚而无湿热、虚寒滑精、气虚下陷者慎服</string>
    <string name="fuling_zhujie">(1)《本草经集注》：“马蔺为之使。恶白敛。畏牡蒙、地榆、雄黄、秦艽、龟甲。”(2)《药性论》：“忌米醋。”(3) 张元素：“如小便利或数，服之则损人目。如汗多入服之，损元气。”(4)《本草经疏》：“病人肾虚，小水自利或不禁或虚寒精清滑，皆不得服。”(5)《得配本草》：“气虚下陷、水涸口干俱禁用。” </string>
    <string name="fuling_chufangtuijian">(1) 治太阳病，发汗后，大汗出，胃中干，烦躁不得眠，脉浮，小便不利，微热消渴者:猪苓十八铢(去皮)，泽泻一两六铢，白术十八铢，茯苓十八铢，桂枝半两(去皮)。上五味，捣为散。以白饮和，服方寸匕，日三服。(《伤寒论》五苓散)
(2) 治小便多、滑数不禁:白茯苓(去黑皮)、干山药(去皮，白矾水内湛过，慢火焙干)。上二味，各等分，为细末。稀米饮调服之。(《儒门事亲》)
(3) 治水肿:白水(净)二钱，茯苓三钱，郁李仁(杵)一钱五分。加生姜汁煎。(《不知医必要》茯苓汤)
(4) 治皮水，四肢肿，水气在皮肤中，四肢聂聂动者:防己三两，黄耆三两，桂枝三两，茯苓六两，甘草二两。上五味，以水六升，煮取二升，分温三服。(《金匮要略》防己茯苓汤)
(5) 治心下有痰饮，胸胁支满目眩:茯苓四两，桂枝，白术各三两，甘草二两。上四味，以水六升，煮取三升，分温三服，小便则利。(《金匮要略》苓桂术甘汤)
(6) 治卒呕吐，心下痞，膈间有水，眩悸者:半夏一升，生姜半斤，茯苓三两(一法四两)。上三味，以水七升煮取一升合，分温再服。(《金匮要略》小半夏加茯苓汤)
(7) 治飧泄洞利不止:白茯苓-两，南木香半两(纸裹炮)。上二味，为细末，煎紫苏木瓜汤调下二钱匕。(《百选方》)
(8) 治湿泻:白术一两，茯苓(去皮)七钱半。上细切，水煎一两，食前服。(《原病式》茯苓汤)
(9) 治胃反吐而渴，欲饮水者:茯苓半斤，泽泻四两，甘草二两，桂枝二两，白术三两，生姜四两。上六味，以水一斗，煮取三升，纳泽泻再煮取二升半，温服八合，日三服。(《金匮要略》茯苓泽泻汤)
(10) 治丈夫元阳虚惫，精气不固，余沥常流，小便白浊，梦寐频泄，及妇人血海久冷，白带、白漏、白淫，下部常湿，小便如米泔，或无子息(不育):黄蜡四两，白茯苓四两(去皮、作块，用猪苓一分，同于瓷器内煮二十余沸，出，日干，不用猪苓)。上以茯苓为末，熔黄蜡为丸，如弹子大。空心细嚼，满口生津，徐徐咽服，以小便清为度。(《局方》威喜丸)
(11) 治心虚梦泄，或白浊:白茯苓末二钱。米汤调下，日二服。(《仁斋直指方》)
(12) 治心汗，别处无汗，独心孔一片有汗，思虑多则汗亦多，病在用心，宜养心血:以艾汤调茯苓末服之。(《证治要诀》)
(13) 治下虚消渴，上盛下虚，心火炎烁，肾水枯涸，不能交济而成渴证:白茯苓一斤，黄连一斤。为末，熬天花粉作糊，丸梧桐子大。每温汤下五十丸。(《德生堂经验方》)
(14) 治头风虚眩，暖腰膝，主五劳七伤:茯苓粉同曲米酿酒饮。(《纲目》茯苓酒)
(15) 治皯:白蜜和茯苓涂上，满七日。(《补缺肘后方》) </string>
    <string name="fuling_lianjie">http://www.zysj.com.cn/zhongyaocai/yaocai_f/fuling.html</string>
    <string name="baishu_jianjie">为菊科植物白术（学名：Atractylodes macrocephala Koidz.）的根茎。霜降至立冬采挖，除去茎叶和泥土，烘干或晒干，再除去须根即可。烘干者称"烘术"；晒干者称"生晒术"，亦称"冬术"。 </string>
    <string name="baishu_gongnengzhuzhi">补脾，益胃，燥湿，和中，安胎。治脾胃气弱，不思饮食，倦怠少气，虚胀，泄泻，痰饮，水肿，黄疸，湿痹，小便不利，头晕，自汗，胎气不安。
(1)《本经》："主风寒湿痹，死肌，痉，疸，止汗，除热消食。"
(2)《别录》："主大风在身面，风眩头痛，目泪出，消痰水，逐皮间风水结肿，除心下急满，及霍乱吐下不止，利腰脐间血，益津液，暖胃，消谷嗜食。"
(3)《药性论》："主大风顽痹，多年气痢，心腹胀痛，破消宿食，开胃，去痰诞，除寒热，止下泄，主面光悦，驻颜去皯，治水肿胀满，止呕逆，腹内冷痛，吐泻不住，及胃气虚冷痢。"
(4)《唐本草》："利小便。"
(5)《日华子本草》："治一切风疾，五劳七伤，冷气腹胀，补腰膝，消痰，治水气，利小便，止反胃呕逆，及筋骨弱软，痃癖气块，妇人冷癥瘕，温疾，山岚瘴气，除烦长肌。"
(6)《医学启源》："除湿益燥，和中益气，温中，去脾胃中湿，除胃热，强脾胃，进饮食，和胃，生津液，主肌热，四肢困倦，目不欲开，怠惰嗜卧，不思饮食，止渴，安胎。" </string>
    <string name="baishu_yaoxing">苦、甘，温。归脾、胃经。 </string>
    <string name="baishu_yongfayongliang">内服：煎汤，1.5～3钱；熬膏或入丸、散。</string>
    <string name="baishu_yaocaitezheng">干燥的根茎，呈拳状团块，有不规则的瘤状突起，长5～8厘米，直径2～5厘米。表面灰黄色至棕黄色，有浅而细的纵皱纹。下部两侧膨大似如意头，俗称"云头"。向上则渐细，或留有一段地上茎，俗称"白术腿"。在瘤状突起的顶端，常有茎基残迹或芽痕，须根痕也较明显。质坚硬，不易折断，断面不平坦。烘术的断面淡黄白色，角质，中央时有裂隙。生晒术的断面皮部类白色，本质部淡黄色至黄色，有油点。气香，味甜微辛，略带粘液性。以个大、表面灰黄色、断面黄白色、有云头、质坚实、无空心者为佳。
野于术是产于浙江於潜、吕化、天目山一带的野生白术，一名为"天生术"，该种商品早巳绝迹。现售之於术，系将新昌的白术种子，播种在於潜山区的栽培品，折断面黄白色，有黄色放射状纹理。气清香，甜味强而辣味少。一般认为於潜白术的品质较新昌白术为佳。 </string>
    <string name="baishu_peiwujinji">阴虚燥渴，气滞胀闷者忌服。</string>
    <string name="baishu_zhujie">(1)《本草经集注》："防风、地榆为之使。"(2)《药品化义》："凡郁结气滞，胀闷积聚，吼喘壅塞，胃痛由火，痈疽多脓，黑瘦人气实作胀，皆宜忌用。"(3) 忌桃、李、菘菜、雀肉、青鱼。</string>
    <string name="baishu_chufangtuijian">处方推荐：(1)治虚弱枯瘦，食而不化：于术（酒浸，九蒸九晒）一斤，菟丝子（酒煮吐丝，晒干）一斤，共为末，蜜丸，梧子大。每服二、三钱。（《纲目拾遗》）
(2) 治脾虚胀满：白术二两，橘皮四两。为末，洒糊丸，梧子大。每食前木香汤送下三十丸。（《全生指迷方》宽中丸）
(3) 治痞，消食强胃：枳实（麸炒黄色）一两，白术二两。上为极细末，荷叶裹烧饭为丸，如绿豆一倍大。每服五十丸，白汤下，不拘时候，量所伤多少，加减服之。（《兰室秘藏》积术丸）
(4) 服食滋补，止久泄痢：上好白术十两，切片，入瓦锅内，水淹过二寸，文武火煎至一半，倾汁入器内，以渣再煎，如此三次，乃取前后汁同熬成膏，入器中一夜，倾去上面清水，收之。每服二、三匙，蜜汤调下。（《千金良方》白术膏）
(5) 治脾虚泄泻：白术一两，芍药半两（冬月不用芍药，加肉豆蔻，泄者炒）。上为末，粥丸。（《丹溪心法》白术丸）
(6) 治小儿久患泄泻，脾虚不进饮食，或食讫仍前泻下，米谷不化：白术一分（米泔浸一时，切，焙干），半夏一钱半（浸洗七次），丁香半钱（炒）。上为细末，生姜自然汁糊丸，黍米大。每半岁儿三丸，三五岁儿五、七丸，淡生姜汤下，早晚各一。（《小儿卫生总微论方》温白丸）
(7) 治湿泻暑泻：白术、车前子等分，炒为末，白汤下二、三钱。（《简便单方》）
(8) 治肠风痔漏、脱肛泻血、面色萎黄，积年久不瘥：白术一斤（糯米泔浸三日，细研锉，炒焦为末），干地黄半斤（净洗，用碗盛于甑上蒸烂细研）。上相和，如硬，滴酒少许，众手丸梧桐子大，焙干。每服十五丸，空心粥饮下，加至二十丸。（《普济方》香术丸）
(9) 治心下坚，大如盘，边如旋盘，水饮所作：枳实七枚，白术二两。上二味，以水五升，煮取三升，分温三服，腹中耍即当散也。（《金匮要赂）枳术汤）
(10) 治伤寒八九日，风湿相搏，身体疼烦，不能自转侧，不呕不渴，脉浮虚而涩，大便坚，小便自利者：白术二两，附子一枚半（炮去皮），甘草一两（炙），生姜一两半（切），大枣六枚。上五味，以水三升，煮取一升去滓，分温三服，一服觉身痹半日许，再服。三服都尽，其人如冒状，勿怪，即是术、附并走皮中，逐水气未得除故耳。（《金匮要略》白术附子汤）
(11) 治中湿，口噤，不知人：白术半两，酒三盏。煎一盏，顿服；不能饮酒，以水代之。日三，夜一。（《三因方》白术酒）
(12) 治忽头眩运，经久不差，四体渐羸，食无味，好食黄土：白术三斤，曲三斤。上二味搀筛酒和，并手捻丸如梧子，暴干。饮服二十枚，日三。忌桃、李、雀肉等。（《外台》）
(13) 治风虚，头重眩，苦极，不知食味。暖肌，补中，益精气：白术二两，附子一枚半（炮去皮），甘草一两（炙）。上三味，锉，每五钱匕，姜五片，枣一枚，水盏半，煎七分，去滓，温服。（《近效方》术附汤）
(14) 治自汗不止：白术末，饮服方寸匕，日二服。（《千金方》）
(15) 治盗汗：白术四两，分作四份，一份用黄芪同炒，一份用石斛同炒，一份用牡蛎同炒，一份用麸皮同炒。上各微炒黄色，去余药。只用白术，研细。每服二钱，粟米汤调下，尽四两。（《丹溪心法》）
(16) 治老小虚汗：白术五钱，小麦一撮，水煮干，去麦为末，用黄芪汤下一钱。（《全幼心鉴》）
(17)治儿童流涎：生白术捣碎，加水和食糖，放锅上蒸汁，分次口服，每天用三钱。（《江苏中医》（12）：1，1965） </string>
    <string name="baishu_lianjie">http://www.zysj.com.cn/zhongyaocai/yaocai_b/baishu.html</string>
    <string name="maidong_jianjie">本品为百合科植物麦冬（沿阶草）Ophiopogon japonicus （Thunb.）Ker-Gawl.的干燥块根。商品大多为栽培品。浙江于栽培后第三年立夏时采挖，称"杭麦冬"；四川于栽培第二年清明后采挖，称"川麦冬"。野麦冬多在清明后挖取，习称"土麦冬"。麦冬挖起后，剪下块根，洗净泥土，暴晒3～4天，堆通风处，使其反潮，蒸发水气，约3日，摊开再晒，如此反复2～3次。晒干后，除净须根杂质即可。 </string>
    <string name="maidong_gongnengzhuzhi">养阴润肺，清心除烦，益胃生津。治肺燥干咳，吐血，咯血，肺痿，肺痈，虚劳烦热，消渴，热病津伤，咽干口燥，便秘。
(1)《本经》："主心腹结气，伤中伤饱，胃络脉绝，羸瘦短气。"
(2)《别录》："疗身重目黄，心下支满，虚劳客热，口干燥渴，止呕吐，愈痿蹶，强阴益精，消谷调中，保神，定肺气，安五脏，令人肥健。"
(3)《药性论》："治热毒，止烦渴，主大水面目肢节浮肿，下水。治肺痿吐脓，主泄精。"
(4)《本草拾遗》："治寒热体劳，下痰饮。"
(5)《日华子本草》："治五劳七伤，安魂定魄，时疾热狂，头痛，止嗽。"
(6)《本草衍义》："治心肺虚热。"
(7)《珍珠囊》："治肺中伏火，生脉保神。"
(8)《医学启源》："《主治秘诀》云，治经枯乳汁不下。"
(9)《用药心法》："补心气不足及治血妄行。"
(10)《南京民间药草））："治妇女湿淋。"
(11)《福建民间草药》："能清心益肝，利尿解热，治小便淋闭，小儿肝热。"
(12)《安徽药材》："治咽喉肿痛。" </string>
    <string name="maidong_yaoxing">甘微苦，寒。入肺、胃、心经。</string>
    <string name="maidong_yongfayongliang">内服：煎汤，2～4钱；或入丸，散。 </string>
    <string name="maidong_yaocaitezheng">(1) 杭麦冬,又名：笕麦冬、浙麦冬。干燥块根呈纺锤形，两头钝尖，中部肥满，微弯曲，长2厘米左右，有的可达4厘米，中部直径4～6毫米。表面黄白色，半透明，有不规则的纵皱纹。未干透时，质较柔韧，干后质坚硬。折断面黄白色，角质状。横断面中央有细小的木质部。气微香，味微甜。
(2) 川麦冬,形状与杭麦冬相似而较短粗。表面乳白色，有光泽。质较坚硬；香气较小；味较淡，少粘性。
(3) 土麦冬,表面粗糙皱缩，黄黑色，形体瘦小，纤维性强。
以上均以表面淡黄白色、肥大、质柔、气香、味甜、嚼之发粘者为佳。瘦小、色棕黄、嚼之粘性小者为次。 </string>
    <string name="maidong_peiwujinji">凡脾胃虚寒泄泻，胃有痰饮湿浊及暴感风寒咳嗽者均忌服。</string>
    <string name="maidong_zhujie">(1)《本草经集注》："地黄、车前为之使。恶款冬、苦瓠。畏苦参、青囊。"
(2)《药性论》："恶苦芺。畏木耳。"
(3)《纲目》："气弱胃寒者必不可饵。"</string>
    <string name="maidong_chufangtuijian">处方推荐：①治燥伤肺胃阴分，或热或咳者：沙参三钱，麦冬三钱，玉竹二钱，生甘草一钱，冬桑叶一钱五分，扁豆一钱五分，花粉一钱五分。水五杯，煮取二杯，日再服。（《温病条辨》沙参麦冬汤）
(1) 治吐血，衄血不止：生麦门冬汁五合，生刺蓟汁五合，生地黄汁五合。相和，于锅中略暖过，每服一小盏，调伏龙肝末一钱服之。（《圣惠方》麦门冬饮子）
(2) 治衄血不止：麦门冬、生地黄，每服一两，水煎。（《济生方》麦门冬饮）
(3) 治齿缝出血成条：人参八分，茯苓、麦冬各一钱。水煎温服。（苏轼麦门冬汤）
(4) 治骨蒸肺痿，四肢烦热，不能食，口干渴：麦门冬（去心，焙）、地骨皮各五两。上二味粗捣筛，每服五钱匕。先以水二盏，煎小麦一合，至一盏半，去麦入药，煎至一盏，去滓，分温二服，空腹食后各一。（《圣济总录》麦门冬汤）
(5) 治肺痈涕唾涎沫，吐脓如粥：麦门冬（去心，焙）二两，桔梗（去芦头）五两，甘草（炙，锉）三分。上三味粗捣筛，每服三钱匕，水一盏，青蒿心叶十片，同煎至七分，去滓温服。稍轻者粥饮调下亦得。（《圣济总录》麦门冬汤）
(6) 治火逆上气，咽喉不利：麦门冬七升，半夏一升，人参二两，甘草二两，粳米三合，大枣十二枚。上六味，以水一斗二升，煮取六升，温服一升，日三夜一服。（《金匮要略》麦门冬汤）
(7) 治虚热上攻，脾肺有热，咽喉生疮：麦门冬一两，黄连五钱。上为末，蜜丸如梧桐子大。每服三十丸，食前麦门冬汤下。（《普济方》麦门冬丸）
(8) 治患热消渴：黄连一升（去毛），麦门冬五两（去心）。上二味，捣筛，以生地黄汁、栝楼根汁。牛乳各三合和，顿为丸如梧子，一服二十五丸，饮下，日再服，渐渐加至三十丸。（《外台秘要方》）
(9) 治消渴，喉干不可忍，饮水不止，腹满急胀：麦门冬（去心，焙），乌梅（去核取肉，炒）各二两。上二味粗捣筛，每服三钱匕，水一叠，煎至半盏，去滓，食后温服，日三。（《圣济总录》麦门冬汤）
(10) 治阳明温病，无上焦症，数日大便不通，当下之，若其人阴素虚，不可行承气者：元参一两，麦冬八钱，生地八钱。水八杯，煮取三杯，口干则与饮令尽，不便，再作服。（《温病条辨》增液汤）
(11) 治疟伤胃阴，不饥，不饱，不便，潮热，得食则烦热愈加，津液不复者：麦冬五钱（连心），火麻仁四钱，生白芍四钱，何首乌三钱，乌梅肉二钱，知母二钱。水八杯，煮取三杯，分三次温服。（《温病条辨》麦冬麻仁汤）
(12) 治燥伤胃阴：玉竹三钱，麦冬三钱，沙参二钱，生甘草一钱，水五杯，煮取二杯，分二次服。（《温病条辫》玉竹麦门冬汤）
(13)治热伤元气，肢体倦怠，气短懒言，口干作渴，汗出不止，脚欹眼黑，津枯液涸：人参五钱，麦门冬（去心）三钱，五味子二钱（碎）。水煎，不拘时温服。（《千金方》生脉散） </string>
</resources>