<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/image_show"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:src="@mipmap/unknow"/>

            <TextView
                android:id="@+id/text_jianjie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/image_show"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="简介:"
                android:textSize="30dp"
                android:textColor="#FFFFFF"
                android:background="@color/colorPrimary"/>
            <Button
                android:id="@+id/musicbtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_below="@+id/image_show"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/musicbtn_1"/>

            <ScrollView
                android:id="@+id/scrollView_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/musicbtn">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/TextView_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:textSize="20dp"
                        android:text="@string/fuling_jianjie"
                        />

                    <TextView
                        android:id="@+id/gongnengzhuzhi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/TextView_1"
                        android:text="功能主治："
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:textSize="30dp"
                        android:textColor="#FFFFFF"
                        android:background="@color/colorPrimary"/>
                    <Button
                        android:id="@+id/musicbtn_1"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_below="@+id/TextView_1"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/musicbtn_1"/>
                    <TextView
                        android:id="@+id/gongnengzhuzhi_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/gongnengzhuzhi"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:textSize="20dp"
                        android:text="@string/fuling_gongnengzhuzhi"/>

                    <TextView
                        android:id="@+id/yaoxing"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/gongnengzhuzhi_1"
                        android:text="药性："
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:textSize="30dp"
                        android:textColor="#FFFFFF"
                        android:background="@color/colorPrimary"/>
                    <Button
                        android:id="@+id/musicbtn_2"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_below="@+id/gongnengzhuzhi_1"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/musicbtn_1"/>
                    <TextView
                        android:id="@+id/yaoxing_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/yaoxing"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:textSize="20dp"
                        android:text="@string/fuling_yaoxing"/>

                    <TextView
                        android:id="@+id/yongfayongliang"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/yaoxing_1"
                        android:text="用法用量："
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:textSize="30dp"
                        android:textColor="#FFFFFF"
                        android:background="@color/colorPrimary"
                        />
                    <Button
                        android:id="@+id/musicbtn_3"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_below="@+id/yaoxing_1"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/musicbtn_1"/>
                    <TextView
                        android:id="@+id/yongfayongliang_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/yongfayongliang"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:textSize="20dp"
                        android:text="@string/fuling_yongfayongliang"
                        />

                    <TextView
                        android:id="@+id/yaocaitezheng"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/yongfayongliang_1"
                        android:text="药材特征："
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:textSize="30dp"
                        android:textColor="#FFFFFF"
                        android:background="@color/colorPrimary"
                        />
                    <Button
                        android:id="@+id/musicbtn_4"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_below="@+id/yongfayongliang_1"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/musicbtn_1"/>
                    <TextView
                        android:id="@+id/yaocaitezheng_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/yaocaitezheng"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:textSize="20dp"
                        android:text="@string/fuling_yaocaitezheng"
                        />

                    <TextView
                    android:id="@+id/peiwujinji"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/yaocaitezheng_1"
                    android:text="配伍禁忌："
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textSize="30dp"
                    android:textColor="#FFFFFF"
                    android:background="@color/colorPrimary"
                    />
                    <Button
                        android:id="@+id/musicbtn_5"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_below="@+id/yaocaitezheng_1"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/musicbtn_1"/>
                    <TextView
                        android:id="@+id/peiwujinji_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/peiwujinji"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:textSize="20dp"
                        android:text="@string/fuling_peiwujinji"
                        />
                    <TextView
                        android:id="@+id/zhujie"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/peiwujinji_1"
                        android:text="注解："
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:textSize="30dp"
                        android:textColor="#FFFFFF"
                        android:background="@color/colorPrimary"
                        />
                    <Button
                        android:id="@+id/musicbtn_6"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_below="@+id/peiwujinji_1"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/musicbtn_1"/>
                    <TextView
                        android:id="@+id/zhujie_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/zhujie"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:textSize="20dp"
                        android:text="@string/fuling_zhujie"
                        />

                    <TextView
                        android:id="@+id/chufangtuijain"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/zhujie_1"
                        android:text="处方推荐："
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:textSize="30dp"
                        android:textColor="#FFFFFF"
                        android:background="@color/colorPrimary"
                        />
                    <Button
                        android:id="@+id/musicbtn_7"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_below="@+id/zhujie_1"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/musicbtn_1"/>
                    <TextView
                        android:id="@+id/chufangtuijain_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/chufangtuijain"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:textSize="20dp"
                        android:text="@string/fuling_chufangtuijian"
                        />

                    <TextView
                        android:id="@+id/lianjie"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/chufangtuijain_1"
                        android:text="链接："
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:textSize="30dp"
                        android:textColor="#FFFFFF"
                        android:background="@color/colorPrimary"
                        />
                    <Button
                        android:id="@+id/musicbtn_8"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_below="@id/chufangtuijain_1"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/musicbtn_1"/>
                    <TextView
                        android:id="@+id/lianjie_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/lianjie"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:autoLink="web"
                        android:textSize="20dp"
                        android:text="@string/fuling_lianjie"
                        />


                </RelativeLayout>
            </ScrollView>
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>